Fixed layout issue, textfield clear btn issue, removed search btn

--- a/Source/AdminPortal/Content/css/main.css
+++ b/Source/AdminPortal/Content/css/main.css
@@ -3847,6 +3847,13 @@ ul.multilevel-accordion ul li > a {
   font-size: 80%;
   padding: 3px 6px;
   margin: 0 6px 0 0;
+  position: absolute;
+  width: 41px;
+}
+#admin #site-list .multilevel-accordion li .link-title {
+  display: inline-block;
+  padding: 0 15px 0 50px;
+  line-height: 1.3;
 }
 #admin #site-list .multilevel-accordion .wj-favourite,
 #admin #site-list .multilevel-accordion .wj-alt-favourite {
@@ -3866,6 +3873,15 @@ ul.multilevel-accordion ul li > a {
   color: #F2AE43;
 }
 @media only screen and (max-width: 567px) {
+  #content-wrapper #main-nav {
+    height: auto;
+  }
+  #content-wrapper .nav-items .username a {
+    width: 100%;
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+  }
   #admin #shortcut-list {
     margin: 0;
   }
